--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@angular/service-worker": "^15.0.4",
     "file-saver": "^2.0.5",
     "joi": "^17.7.0",
     "rxjs": "~7.5.0",
