--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/service-worker": "^15.0.4",
     "file-saver": "^2.0.5",
     "joi": "^17.7.0",
+    "linkify-html": "^4.1.0",
+    "linkifyjs": "^4.1.0",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
